--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
   "rules": {
     "simple-import-sort/imports": "error",
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "camelcase":"off"
   },
   "parserOptions": {
     "sourceType": "module",
