--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -31,6 +31,7 @@
       "@lib/*": ["./src/lib/*"],
       "@pages/*": ["./src/pages/*"],
       "@/*": ["./src/*"],
+      "@utils/*": ["./src/utils/*"],
     }
   },
   "include": ["src"]
