--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "@lib/*": ["./src/lib/*"],
       "@pages/*": ["./src/pages/*"],
       "@/*": ["./src/*"],
+      "@utils/*": ["./src/utils/*"],
     }
   }
 }
