--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "base-64": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.408.0",
     "match-sorter": "^6.3.4",
