--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.1",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^6.24.1",
     "sonner": "^1.5.0",
     "sort-by": "^1.2.0",
