--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,15 +9,17 @@
     }
   ],
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "src/",
     "paths": {
-      "@assets/*": ["./src/assets/*"],
-      "@theme/*": ["./src/theme/*"],
-      "@components/*": ["./src/components/*"],
-      "@lib/*": ["./src/lib/*"],
-      "@pages/*": ["./src/pages/*"],
-      "@/*": ["./src/*"],
-      "@utils/*": ["./src/utils/*"],
-    }
-  }
+      "@/*": ["/*"],
+      "@assets/*": ["assets/*"],
+      "@theme/*": ["theme/*"],
+      "@components/*": ["components/*"],
+      "@lib/*": ["lib/*"],
+      "@pages/*": ["pages/*"],
+      "@utils/*": ["utils/*"],
+      "@store/*": ["store/*"],
+      "@services/*":["services/*"]
+    },
+}
 }
