Criando pagina do Internacional

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,12 +25,14 @@
 
     "baseUrl": "src/",
     "paths": {
-      "@/*": ["/*"],
+      "@*": ["/*"],
       "@assets/*": ["assets/*"],
       "@theme/*": ["theme/*"],
+      "@models/*": ["models/*"],
       "@components/*": ["components/*"],
       "@lib/*": ["lib/*"],
       "@pages/*": ["pages/*"],
+      "@dtos/*": ["dtos/*"],
       "@utils/*": ["utils/*"],
       "@store/*": ["store/*"],
       "@services/*":["services/*"]
